--- a/app/src/main/res/layout/activity_imc.xml
+++ b/app/src/main/res/layout/activity_imc.xml
@@ -1,10 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/icons_green"
-    tools:context=".ImcActivity">
+    android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/btn_"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:context=".ImcActivity">
+
+        <TextView
+            android:id="@+id/txt_imcdesc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/default_margin_horizontal"
+            android:layout_marginVertical="@dimen/default_margin_vertical"
+            android:text="@string/imc_desc"
+            android:textAlignment="viewStart"
+            android:textSize="@dimen/text_size"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/edtxt_imc_height"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/default_margin_horizontal"
+            android:hint="@string/height_meters"
+            android:inputType="numberDecimal"
+            android:maxLength="@dimen/maxSize"
+            android:textSize="@dimen/text_size" />
+
+        <EditText
+            android:id="@+id/edtxt_imc_weight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/default_margin_horizontal"
+            android:layout_marginVertical="@dimen/default_margin_vertical"
+            android:hint="@string/weight_kg"
+            android:inputType="numberDecimal"
+            android:maxLength="@dimen/maxSize"
+            android:textSize="@dimen/text_size" />
+
+
+        <Button
+            android:id="@+id/btn_calculate_imc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/icons_green"
+            android:paddingHorizontal="@dimen/default_padding_button"
+            android:text="@string/calculate_imc" />
+
+    </LinearLayout>
+</ScrollView>
