Adding business rules

--- a/app/src/main/res/layout/activity_imc.xml
+++ b/app/src/main/res/layout/activity_imc.xml
@@ -1,9 +1,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
@@ -19,7 +19,7 @@
             android:id="@+id/edtxt_imc_height"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/height_meters"
+            android:hint="@string/height"
             style="@style/edit_text" />
 
         <EditText
