--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="edit_text">
         <item name="android:layout_marginHorizontal">@dimen/default_margin_horizontal</item>
         <item name="android:layout_marginVertical">@dimen/default_margin_vertical</item>
-        <item name="android:inputType">numberDecimal</item>
+        <item name="android:inputType">number</item>
         <item name="android:maxLength">3</item>
     </style>
 
