--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,29 +8,34 @@
     tools:context=".MainActivity"
     android:gravity="center">
 
-    <LinearLayout
-        android:id="@+id/lyt_imc"
-        android:background="@color/light_gray"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:padding="10dp">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+<!--    <LinearLayout-->
+<!--        android:id="@+id/lyt_imc"-->
+<!--        android:background="@color/light_gray"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="vertical"-->
+<!--        android:gravity="center"-->
+<!--        android:padding="10dp">-->
 
-            tools:srcCompat="@drawable/baseline_auto_awesome_24" />
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_imc"
-            android:textSize="20dp"
-            android:textStyle="bold"/>
+<!--            tools:srcCompat="@drawable/baseline_auto_awesome_24" />-->
 
-    </LinearLayout>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/label_imc"-->
+<!--            android:textSize="20dp"-->
+<!--            android:textStyle="bold"/>-->
+
+<!--    </LinearLayout>-->
 
 </LinearLayout>
