--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,6 @@
     <dimen name="default_margin_horizontal">16dp</dimen>
     <dimen name="default_margin_vertical">20dp</dimen>
     <dimen name="maxSize">3</dimen>
-    <dimen name="default_padding_button">40dp</dimen>
+    <dimen name="default_padding">16dp</dimen>
     <dimen name="textSizeDefault">17sp</dimen>
 </resources>
