--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,7 @@
         <item name="android:textSize">@dimen/textSizeDefault</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:paddingHorizontal">@dimen/default_padding_button</item>
+        <item name="android:paddingHorizontal">@dimen/default_padding</item>
         <item name="android:backgroundTint">@color/icons_green</item>
     </style>
 
